# raw-root

./: .gitignore  CMakeLists.txt  Makefile  README.md  RawRootPlugin.sbt  build.sh
RawRootPlugin/src/main/java/raw/root/: Inferrer.java
RawRootPlugin/src/main/java/raw/root/types/: CollectionType.java  DoubleType.java  StringType.java
RawRootPlugin/src/main/native/source/: Inferrer.cpp  Inferrer.hpp  TypeWrappers.hpp
RawRootPlugin/src/main/scala/raw/root/: RootLoader.scala
RawRootPlugin/src/test/java/: CMakeLists.txt
RawRootPlugin/src/test/scala/: test.sc
RootWalker/: CMakeLists.txt
RootWalker/handlers/: CMakeLists.txt
RootWalker/handlers/TCollection/: CMakeLists.txt  TCollection.cpp
RootWalker/handlers/TDirectory/: CMakeLists.txt
RootWalker/handlers/TObjString/: CMakeLists.txt  TObjString.cpp
RootWalker/handlers/TPolyLine/: CMakeLists.txt  TPolyLine.cpp
RootWalker/handlers/TTree/: CMakeLists.txt  TTree.cpp
RootWalker/handlers/Vector/: .Array.cpp.kate-swp  CMakeLists.txt  Vector.cpp
RootWalker/source/: Node.hpp
RootWalker/test/: CMakeLists.txt  main.cpp
TestRootFile/: CMakeLists.txt  GenerateFile.C
TestRootFile/cmake/Modules/: FindRoot.cmake
cmake/Modules/: FindRoot.cmake  FindScidb.cmake
playground/: CMakeLists.txt  main.cpp
playground/inspector/: CMakeLists.txt  inspector.cpp
playground/root/: CMakeLists.txt  GenerateFile.C  TMyClass.cpp  TMyClass.h
playground/visitor/: CMakeLists.txt  Data.hpp  TObjectHandler.cpp  TObjectHandler.hpp  TypeResolver.cpp  TypeResolver.hpp  Walker.cpp  Walker.hpp  data.cpp  data.hpp  main.cpp  walker.cpp  walker.hpp
playground/visitor/handlers/: CMakeLists.txt
playground/visitor/handlers/TCollection/: CMakeLists.txt  TCollection.cpp
playground/visitor/handlers/TPolyLine/: CMakeLists.txt  TPolyLine.cpp
playground/visitor/handlers/Vector/: Vector.cpp
project/: Build.scala  plugins.sbt
src/: .kdev_include_paths  CMakeLists.txt
src/Inferrer/: CMakeLists.txt  Inferrer.cpp  InferrerException.hpp  TypeWrappers.hpp
src/Inferrer/raw/root/: Inferrer.java
src/Inferrer/raw/root/types/: BasicType.java  IntegerType.java  RecordType.java  Type.java  UnknownType.java
src/JRootWalker/: CMakeLists.txt
src/JRootWalker/raw/root/: Data.cpp  Data.h  Data.java  IVisitor.java  Node.cpp  Node.h  Node.java  Tools.h  Walker.cpp  Walker.h  Walker.java
src/RootWalker/: CMakeLists.txt  Data.cpp  Data.hpp  Node.cpp  Node.hpp  TObjectHandler.cpp  TObjectHandler.hpp  TypeHandler.hpp  TypeResolver.cpp  TypeResolver.hpp  Walker.cpp  Walker.hpp
src/RootWalker/handlers/: CMakeLists.txt
src/RootWalker/handlers/TCollection/: CMakeLists.txt  TCollection.cpp
src/RootWalker/handlers/TDirectory/: CMakeLists.txt  TDirectory.cpp
src/RootWalker/handlers/TObjString/: CMakeLists.txt  TObjString.cpp
src/RootWalker/handlers/TPolyLine/: CMakeLists.txt  TPolyLine.cpp
src/RootWalker/handlers/TTree/: CMakeLists.txt  TTree.cpp
src/RootWalker/handlers/Vector/: CMakeLists.txt  Vector.cpp
src/ScidbPlugin/: CMakeLists.txt  plugin.cpp
src/ScidbPlugin/loader/: AttrFinder.hpp  LogicalRootLoader.cpp  PhysicalRootLoader.cpp  RootLoaderArray.hpp  Utils.hpp
src/ScidbPlugin/version/: LogicalRootVersion.cpp  PhysicalRootVersion.cpp
test/: CMakeLists.txt  main.cpp
test/cpp/: CMakeLists.txt  main.cpp
test/java/: CMakeLists.txt  Main.java
test/root/: CMakeLists.txt  GenerateFile.C  TData.cpp  TData.h  TMyClass.h
